--- a/main-eng.html
+++ b/main-eng.html
@@ -63,7 +63,7 @@
                 <div class="head-descript">
                     <p class="p-head">Denis <br> Novik</p>
                     <p class="p-descript">UX | UI designer <br> 24 years old, Minsk</p>
-                    <p class="p-lang"><a href="main-ru.html">RU | <strong>ENG</strong></a></p>
+                    <p class="p-lang"><a href="html-lang/main-ru.html">RU | <strong>ENG</strong></a></p>
                 </div>
     
                 <img class="img-me" src="img/me.png" alt="me">
