--- a/html-lang/main-ru.html
+++ b/html-lang/main-ru.html
@@ -63,7 +63,7 @@
                 <div class="head-descript">
                     <p class="p-head">Денис <br> Новик</p>
                     <p class="p-descript">UX | UI дизайнер <br> 24 года, Минск</p>
-                    <p class="p-lang"><a href="main-eng.html"><strong>РУ</strong> | АНГЛ</a></p>
+                    <p class="p-lang"><a href="index.html"><strong>РУ</strong> | АНГЛ</a></p>
                 </div>
     
                 <img class="img-me" src="img/me.png" alt="me">
