--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Denis Novik</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/main.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -63,7 +63,7 @@
                 <div class="head-descript">
                     <p class="p-head">Denis <br> Novik</p>
                     <p class="p-descript">UX | UI designer <br> 24 years old, Minsk</p>
-                    <p class="p-lang"><a href="html-lang/main-ru.html">RU | <strong>ENG</strong></a></p>
+                    <p class="p-lang"><a href="main-ru.html">RU | <strong>ENG</strong></a></p>
                 </div>
     
                 <img class="img-me" src="img/me.png" alt="me">
