--- a/index.html
+++ b/index.html
@@ -283,6 +283,19 @@
     
                 <p class="p-descript">Like me on <br> LinkedIn, Instagram, Behance, Dribble</p>
 
+                <button type="button" class="btn btn-dark modal_btn">About project</button>
+
+                <div class="modal">
+
+                    <div class="modal-content" id="modal-cont">
+                        <h2>About project</h2>
+                        <p class="name"></p>
+                        <p class="email"></p>
+                        <p class="github"></p>
+                    </div>
+
+                </div>
+
             </div>
             
         </div>
